<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="163dp"
            android:layout_marginStart="163dp"
            android:layout_marginTop="40dp"
            android:text="@string/recommend"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/group1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="280dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/rb_a_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_a_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="43dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/platform_ownership"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/group2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group1" />

        <RadioGroup
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="283dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/rb_b_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_b_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="104dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="40dp"
            android:text="@string/game_genre"
            app:layout_constraintBottom_toTopOf="@+id/group3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group2" />

        <RadioGroup
            android:id="@+id/group3"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_marginBottom="83dp"
            android:layout_marginEnd="204dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/rb_c_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role_play"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_c_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_c_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adventure"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_c_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battle_royale"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="32dp"
            android:text="@string/continue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>